--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://gitee.com/happywindman250/testipa/blob/master/CmbGames-mobile.ipa</string>
+					<string>http://jhbk98.com:82/CmbGames-mobile.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
