--- a/manifest.plist
+++ b/manifest.plist
@@ -17,19 +17,19 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/aLittlestar0/testipa/raw/master/512.png</string>
+					<string>https://raw.githubusercontent.com/aLittlestar0/testipa/master/512.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/aLittlestar0/testipa/raw/master/57.png</string>
+					<string>https://raw.githubusercontent.com/aLittlestar0/testipa/master/57.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.bkylVVV.test</string>
+				<string>com.testappbkyl.test</string>
 				<key>bundle-version</key>
 				<string>1.0.0</string>
 				<key>kind</key>
